change base URL

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               YORU
 tagline:             'Your Optimal Recognition Utility'
 description:         '“YORU” is an open-source sftware for animal behavior detection using an object detection. YORU classifies animal behavior as "behavior objects."'
-url:                 "https://HMYamano.github.io"
+url:                 "https://kamikouchi-lab.github.io"
 baseurl:             "/YORU_doc"
 paginate:            5
 permalink:           pretty
