--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,6 @@ github:
   repo: https://github.com/Kamikouchi-lab/YORU
   user: HMYamano
   project: repository
+
+Store:
+  URL: https://www.zazzle.co.jp/store/yorustore
