--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,4 @@ github:
   project: repository
 
 Store:
-  URL: https://www.zazzle.co.jp/store/yorustore
+  URL: https://www.zazzle.co.jp/store/yorustore?rf=238712148117349309
