--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ author:
 
 
 # Custom vars
-version:             v 1.0.0
-google_analytics_id: #UA-XXXX-Y
+version:             v 1.0.2
+google_analytics_id: G-GT3X41B0YR
 
 
 github:
